# gst-cam-streamer

./: .gitignore  CMakeLists.txt  gstreamer_pipelines.txt
src/: gstclient.cpp  gstserver.cpp
